--- a/.htaccess
+++ b/.htaccess
@@ -5,4 +5,4 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 
 # otherwise forward it to index-test.php
-RewriteRule . index-dev.php
+RewriteRule . index.php
