--- a/.gitmodules
+++ b/.gitmodules
@@ -9,4 +9,4 @@
 	url = https://github.com/yiisoft/yii.git
 [submodule "protected/extensions/eauth"]
 	path = protected/extensions/eauth
-	url = https://github.com/paunin/yii-eauth.git
+	url = https://github.com/Nodge/yii-eauth.git
