--- a/.gitmodules
+++ b/.gitmodules
@@ -7,6 +7,6 @@
 [submodule "yii"]
 	path = yii
 	url = https://github.com/yiisoft/yii.git
-[submodule "protected/extensions/eauth"]
-	path = protected/extensions/eauth
-	url = https://github.com/Nodge/yii-eauth.git
+[submodule "protected/extensions/eauth/eauth"]
+	path = protected/extensions/eauth/eauth
+	url = https://github.com/paunin/yii-eauth.git
