--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "protected/extensions/eauth/eauth"]
 	path = protected/extensions/eauth/eauth
 	url = https://github.com/paunin/yii-eauth.git
+[submodule "protected/extensions/eauth"]
+	path = protected/extensions/eauth
+	url = https://github.com/paunin/yii-eauth.git
