--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "protected/extensions/eauth"]
 	path = protected/extensions/eauth
 	url = https://github.com/paunin/yii-eauth.git
+[submodule "js/responsive_filemanager"]
+	path = js/responsive_filemanager
+	url = https://github.com/trippo/ResponsiveFilemanager.git
