--- a/.gitmodules
+++ b/.gitmodules
@@ -13,6 +13,6 @@
 [submodule "protected/extensions/eauth"]
 	path = protected/extensions/eauth
 	url = https://github.com/paunin/yii-eauth.git
-[submodule "packages/solr"]
-	path = packages/solr
+[submodule "protected/packeges/solr"]
+	path = protected/packeges/solr
 	url = https://github.com/phpnode/YiiSolr.git
