--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "protected/extensions/eauth"]
 	path = protected/extensions/eauth
 	url = https://github.com/paunin/yii-eauth.git
+[submodule "protected/extensions/behaviors/SolrBehavior"]
+	path = protected/extensions/behaviors/SolrBehavior
+	url = https://github.com/paunin/YiiSolrBehavior.git
