--- a/api/.htaccess
+++ b/api/.htaccess
@@ -1,4 +1,4 @@
-DirectoryIndex index.php
+DirectoryIndex index.php index.html
 <IfModule mod_rewrite.c>
     RewriteEngine On
     RewriteRule ^$ index.php [QSA,L]
